--- a/src/scss/pages/_dashboard.scss
+++ b/src/scss/pages/_dashboard.scss
@@ -2,6 +2,7 @@
     position: relative;
     margin: auto;
     padding: 0;
+    width: 100%;
     max-width: 1500px;
     opacity: 0;
     animation-name: show-articles;
